Post training day 1

--- a/transformations/breakpoints.html
+++ b/transformations/breakpoints.html
@@ -48,11 +48,11 @@
     <div class="content">
     <img
       sizes="(max-width: 1000px) 100vw, 1000px"
-      srcset="https://res.cloudinary.com/<your cloud here>/image/upload/ar_16:9,c_fill,g_auto/c_scale,w_200/breakpoint-puppy.jpg 200w,
-              https://res.cloudinary.com/<your cloud here>/image/upload/ar_16:9,c_fill,g_auto/c_scale,w_547/breakpoint-puppy.jpg 547w
-              https://res.cloudinary.com/<your cloud here>/image/upload/ar_16:9,c_fill,g_auto/c_scale,w_818/breakpoint-puppy.jpg 818w,
-              https://res.cloudinary.com/<your cloud here>/image/upload/ar_16:9,c_fill,g_auto/c_scale,w_1000/breakpoint-puppy.jpg 1000w"
-      src="https://res.cloudinary.com/<your cloud here>/image/upload/ar_16:9,c_fill,g_auto/c_scale,w_1000/breakpoint-puppy.jpg"
+      srcset="https://res.cloudinary.com/drbjuxc0b/image/upload/ar_16:9,c_fill,g_auto/c_scale,w_200/breakpoint-puppy.jpg 200w,
+              https://res.cloudinary.com/drbjuxc0b/image/upload/ar_16:9,c_fill,g_auto/c_scale,w_547/breakpoint-puppy.jpg 547w
+              https://res.cloudinary.com/drbjuxc0b/image/upload/ar_16:9,c_fill,g_auto/c_scale,w_818/breakpoint-puppy.jpg 818w,
+              https://res.cloudinary.com/drbjuxc0b/image/upload/ar_16:9,c_fill,g_auto/c_scale,w_1000/breakpoint-puppy.jpg 1000w"
+      src="https://res.cloudinary.com/drbjuxc0b/image/upload/ar_16:9,c_fill,g_auto/c_scale,w_1000/breakpoint-puppy.jpg"
       alt="Beautiful Puppy in Sunglasses"
     />
       <p>
@@ -79,7 +79,7 @@
     ></script>
     <script>
       window.addEventListener("load", function() {
-        var cl = cloudinary.Cloudinary.new({ cloud_name: "<insert cloud name>" });
+        var cl = cloudinary.Cloudinary.new({ cloud_name: "drbjuxc0b" });
         // Call
         cl.responsive();
       });
