--- a/transformations/w-auto-example.html
+++ b/transformations/w-auto-example.html
@@ -47,7 +47,7 @@
     <h1>About Auto Width the Puppy</h1>
     <div class="content">
       <img
-        data-src="https://res.cloudinary.com/<insert cloud name>/image/upload/w_auto,c_scale/breakpoint-puppy.jpg"
+        data-src="https://res.cloudinary.com/drbjuxc0b/image/upload/w_auto,c_scale/breakpoint-puppy.jpg"
         class="cld-responsive"
       />
       <p>
@@ -72,7 +72,7 @@
     ></script>
     <script>
       window.addEventListener("load", function() {
-        var cl = cloudinary.Cloudinary.new({ cloud_name: "<insert cloud name>" });
+        var cl = cloudinary.Cloudinary.new({ cloud_name: "drbjuxc0b" });
         // Call
         cl.responsive();
       });
