--- a/upload/lesson2-extra/index.html
+++ b/upload/lesson2-extra/index.html
@@ -15,8 +15,8 @@
   <button id="upload_widget" class="cloudinary-button">Upload files</button>
 
   <script type="text/javascript">  
-    const cloudName = '';
-    const uploadPreset = '';
+    const cloudName = 'drbjuxc0b';
+    const uploadPreset = 'ohqk4dgf';
     const myWidget = cloudinary.createUploadWidget({
       cloudName,
       uploadPreset,
